--- a/frontend/src/app/pages/sellerview/sellerview.component.html
+++ b/frontend/src/app/pages/sellerview/sellerview.component.html
@@ -16,7 +16,7 @@
             <img alt="Thumbnail Image" class="rounded-circle img-raised  w-25 p-3" src="assets/img/ryan.jpg">
           </div>
           <!--/Profile Image-->
-          <h2>Seller name</h2>
+          <h2>{{ user?.username }}</h2>
         </div>
       </div>
     </div>
@@ -39,6 +39,38 @@
     </div>
   </div>
 
+  <div class="subscribe-line subscribe-line-transparent" style="background-image: url('assets/img/banner.jpg')">
+    <div class="text-center container">
+      <div class="row">
+        <div class=" col-md-12 col-sm-12">
+          <div class="mt-5">
+            <h6 class="category category-absolute">Username</h6>
+            <h3>{{user.username}}</h3>
+            <h6 class="category category-absolute">Email</h6>
+            <h3>{{user.email}}</h3>
+
+            <div class="mt-5">
+              <div class="row">
+                <div class="col-md-4">
+                  <h6 class="category ">Telephone</h6>
+                  <h3>{{user.telephone}}</h3>
+                </div>
+                <div class="col-md-4">
+                  <h6 class="category ">Owner Name</h6>
+                  <h3>{{user.firstname}} {{user.lastname}} </h3>
+                </div>
+                <div class="col-md-4">
+                  <h6 class="category ">Address</h6>
+                  <h3>{{user.line1}},{{user.line2}},{{user.line3}}</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="mt-2">
     <div class="container">
       <div class="row">
@@ -48,7 +80,8 @@
             <div class="col-md-12">
               <div class="row">
               </div>
-
+              <p class="category category-absolute">Email</p>
+              <h3>{{user.username}}</h3>
             </div>
           </div>
         </div>
