frontend edit and backend get broadcast

--- a/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
@@ -70,7 +70,7 @@
                   <td scope="row">
                     <div class="social-description">
                       <a href="#button" class="btn btn-primary btn-lg btn-round btn-sm"
-                        routerLink="/userprofile/sellerreply">A</a>
+                        routerLink="/userprofile/sellerreply/{{x._id}}">R</a>
                     </div>
                   </td>
                   <td scope="row">
