--- a/frontend/src/app/pages/sellerview/sellerview.component.html
+++ b/frontend/src/app/pages/sellerview/sellerview.component.html
@@ -45,23 +45,23 @@
         <div class=" col-md-12 col-sm-12">
           <div class="mt-5">
             <h6 class="category category-absolute">Username</h6>
-            <h3>{{user.username}}</h3>
+            <h3>{{user?.username}}</h3>
             <h6 class="category category-absolute">Email</h6>
-            <h3>{{user.email}}</h3>
+            <h3>{{user?.email}}</h3>
 
             <div class="mt-5">
               <div class="row">
                 <div class="col-md-4">
                   <h6 class="category ">Telephone</h6>
-                  <h3>{{user.telephone}}</h3>
+                  <h3>{{user?.telephone}}</h3>
                 </div>
                 <div class="col-md-4">
                   <h6 class="category ">Owner Name</h6>
-                  <h3>{{user.firstname}} {{user.lastname}} </h3>
+                  <h3>{{user?.firstname}} {{user?.lastname}} </h3>
                 </div>
                 <div class="col-md-4">
                   <h6 class="category ">Address</h6>
-                  <h3>{{user.line1}},{{user.line2}},{{user.line3}}</h3>
+                  <h3>{{user?.line1}},{{user?.line2}},{{user?.line3}}</h3>
                 </div>
               </div>
             </div>
@@ -81,7 +81,7 @@
               <div class="row">
               </div>
               <p class="category category-absolute">Email</p>
-              <h3>{{user.username}}</h3>
+              <h3>{{user?.username}}</h3>
             </div>
           </div>
         </div>
