--- a/frontend/src/app/components/broadcast/broadcast.component.html
+++ b/frontend/src/app/components/broadcast/broadcast.component.html
@@ -3,6 +3,7 @@
     <div class="page-header" style="background-image: url('assets/img/bg5.jpg');">
         <div class="container mt-5">
             <div class="row">
+                <!-- Instructions for the user -->
                 <div class="col-md-4 ml-auto mr-auto mt-5">
                     <div class="info info-horizontal">
                         <div class="icon icon-primary">
@@ -46,6 +47,8 @@
                         <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/customerprofile">Back</a>
                     </div>
                 </div>
+                <!-- /Instructions for the user -->
+                <!-- Broadcast form -->
                 <div class="col-md-4 mr-auto mt-5">
                     <div class="card" style=" width: 30rem;">
                         <div class="mt-2">
@@ -78,13 +81,14 @@
 
                                 <div class="footer text-center">
                                     <a class="btn btn-primary btn-round btn-lg btn-block"
-                                        (click)="getBroadcast()">Broadcast</a>
+                                        (click)="sendBroadcast()">Broadcast</a>
                                 </div>
 
                             </form>
                         </div>
                     </div>
                 </div>
+                <!-- /Broadcast form -->
             </div>
         </div>
     </div>
