--- a/frontend/src/app/components/finalizingform/finalizingform.component.html
+++ b/frontend/src/app/components/finalizingform/finalizingform.component.html
@@ -1,77 +1,50 @@
 <app-navbar></app-navbar>
-<div class="mt-5"></div>
 <div class="wrapper">
-  <div class="subscribe-line subscribe-line-transparent" style="background-image: url('assets/img/banner.jpg')">
-    <div class="text-center container">
+  <div class="page-header" style="background-image: url('assets/img/bg5.jpg');">
+    <div class="container mt-5">
       <div class="row">
-        <div class=" col-md-12 col-sm-12">
-          <div class="mt-5">
-            <h3>Finalizing Form</h3>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <div class="mt-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2 col-sm-2">
-          <div class="card text-center" style=" width: 70rem;">
-            <h5>Product</h5>
-            <h5>Product_id</h5>
-            <h5>Description</h5>
-            <h5>category</h5>
-            <div class="col-md-12">
-              <div class="row">
-              </div>
-              <form>
-                <p>price</p>
-                <p>message</p>
-                <div class="d-flex justify-content-between p-2">
+        <!-- Finalizing form -->
+        <div class="col-md-4 mr-auto mt-5">
+          <div class="card" style=" width: 70rem;">
+            <div class="mt-2">
+              <h3 class="card-title">Finalizing Form</h3>
+            </div>
+            <div class="data">
+              <h5>User ID : {{broadcastData?.broadcasts[0]._id}}</h5>
+              <h5>Product : {{broadcastData?.broadcasts[0].product}}</h5>
+              <h5>Category: {{broadcastData?.broadcasts[0].category}}</h5>
+              <h5>Tags : {{broadcastData?.broadcasts[0].tags}}</h5>
+            </div>
+
+            <div class="card-body">
+              <form class="form-group" [formGroup]="finalizingForm">
+                <div class="mt-2">
+                  <div class="form-group"><label>Price</label>
+                    <input [(ngModel)]="price" formControlName="price" class="form-control border-input"
+                      placeholder="Enter the price" type="number">
+                  </div>
                 </div>
+                <div class="mt-3">
+                  <div class="content"><label>Message</label>
+                    <textarea _ngcontent-c15="" class="form-control" cols="80" rows="2" spellcheck="false"
+                      [(ngModel)]="textMessage" formControlName="textMessage">
+                    </textarea>
+                  </div>
+                </div>
+
+                <div class="footer text-center">
+                  <a class="btn btn-primary btn-round btn-lg btn-block" (click)="sendBroadcast()">Send</a>
+                </div>
+
               </form>
             </div>
           </div>
         </div>
+        <!-- /Finalizing form -->
+
+
       </div>
     </div>
   </div>
-
-
-
-  <footer class="footer footer-default">
-    <div class="container">
-      <nav>
-        <ul>
-          <li>
-            <a href="https://www.creative-tim.com">
-              Creative Tim
-            </a>
-          </li>
-          <li>
-            <a href="https://www.creative-tim.com/about-us">
-              About Us
-            </a>
-          </li>
-          <li>
-            <a href="http://blog.creative-tim.com">
-              Blog
-            </a>
-          </li>
-          <li>
-            <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">
-              MIT License
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <div class="copyright">
-        &copy;
-        {{data | date: 'yyyy'}}, Designed by
-        <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by
-        <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
-      </div>
-    </div>
-  </footer>
 </div>
