--- a/frontend/src/app/pages/non-registered-seller-view/non-registered-seller-view.component.html
+++ b/frontend/src/app/pages/non-registered-seller-view/non-registered-seller-view.component.html
@@ -17,16 +17,6 @@
           </div>
           <!--/Profile Image-->
           <h2>{{ user?.username }}</h2>
-          <button *ngIf="[(bookmarkAdded)] == 'true'" class="btn btn-primary btn-sm btn-round" type="button"
-            (click)="removeBookmark()"><i class="now-ui-icons ui-1_bell-53"></i> Remove
-            from
-            Bookmarks
-          </button>
-          <button *ngIf="[(bookmarkAdded)] == 'false'" class="btn btn-primary btn-sm btn-round" type="button"
-            (click)="addBookmark()"><i class="now-ui-icons ui-1_bell-53"></i> Add
-            to
-            Bookmarks
-          </button>
         </div>
       </div>
     </div>
@@ -40,7 +30,7 @@
             <div class="col-md-12">
               <div class="row">
               </div>
-
+              <!-- Rating -->
             </div>
           </div>
         </div>
@@ -55,25 +45,9 @@
           <div class="mt-5">
             <h6 class="category category-absolute">Username</h6>
             <h3>{{user?.username}}</h3>
-            <h6 class="category category-absolute">Email</h6>
-            <h3>{{user?.email}}</h3>
 
-            <div class="mt-5">
-              <div class="row">
-                <div class="col-md-4">
-                  <h6 class="category ">Telephone</h6>
-                  <h3>{{user?.telephone}}</h3>
-                </div>
-                <div class="col-md-4">
-                  <h6 class="category ">Owner Name</h6>
-                  <h3>{{user?.firstname}} {{user?.lastname}} </h3>
-                </div>
-                <div class="col-md-4">
-                  <h6 class="category ">Address</h6>
-                  <h3>{{user?.line1}},{{user?.line2}},{{user?.line3}}</h3>
-                </div>
-              </div>
-            </div>
+            <h6 class="category category-absolute">SignUp for more information</h6>
+            <button class="btn btn-primary btn-lg btn-round">SignUp</button>
           </div>
         </div>
       </div>
