--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -37,7 +37,7 @@
             <div class="col-md-12">
               <div class="row">
               </div>
-
+              <a class="btn btn-primary btn-lg btn-round" (click)="getAllBroad()">test</a>
             </div>
           </div>
         </div>
