--- a/frontend/src/app/components/modal/modal.component.html
+++ b/frontend/src/app/components/modal/modal.component.html
@@ -21,9 +21,9 @@
                         <!-- Email -->
                         <div class="mt-5">
                             <div class="form-group"><label>Email</label>
-                                <input [(ngModel)]="email" formControlName="email" class="form-control border-input"
-                                    placeholder="email" type="email"
-                                    [ngClass]="{'is-invalid':loginForm.get('email').touched && loginForm.get('email').invalid}">
+                                <input [(ngModel)]="log_email" formControlName="log_email"
+                                    class="form-control border-input" placeholder="email" type="email"
+                                    [ngClass]="{'is-invalid':loginForm.get('log_email').touched && loginForm.get('log_email').invalid}">
                                 <div class="invalid-feedback">
                                     <div>Email is required</div>
                                 </div>
@@ -34,9 +34,9 @@
                         <!-- Password -->
                         <div class="mt-5">
                             <div class="form-group"><label>Password</label>
-                                <input [(ngModel)]="password" formControlName="password"
+                                <input [(ngModel)]="log_password" formControlName="log_password"
                                     class="form-control border-input" placeholder="Password" type="password"
-                                    [ngClass]="{'is-invalid':loginForm.get('password').touched && loginForm.get('password').invalid}">
+                                    [ngClass]="{'is-invalid':loginForm.get('log_password').touched && loginForm.get('log_password').invalid}">
                                 <div class="invalid-feedback">
                                     <div>Password is required</div>
                                 </div>
@@ -152,10 +152,10 @@
                                 <input [(ngModel)]="password" formControlName="password"
                                     class="form-control border-input" placeholder="Password" type="password"
                                     [ngClass]="{'is-invalid':signupForm.get('password').touched && signupForm.get('password').invalid}">
-                                <div class="invalid-feedback" *ngIf="signupForm.get('password').errors.required">
+                                <div class="invalid-feedback" *ngIf="signupForm.get('password').errors?.required">
                                     <div>Password is required</div>
                                 </div>
-                                <div class="invalid-feedback" *ngIf="signupForm.get('password').errors.minlength">
+                                <div class="invalid-feedback" *ngIf="signupForm.get('password').errors?.minlength">
                                     <div>Password should contain atleast 5 characters</div>
                                 </div>
 
@@ -175,6 +175,34 @@
                             </div>
                         </div>
                         <!-- /Confirm Password -->
+
+                        <div *ngIf="signupError">
+                            <ngb-alert class="alert alert-danger" role="alert">
+                                <!---->
+                                <div class="container">
+                                    <div class="alert-wrapper">
+                                        <div class="message">
+                                            <div class="alert-icon"><i class="now-ui-icons ui-1_simple-remove"></i>
+                                            </div>Email or Username already exists
+                                        </div>
+                                    </div>
+                                </div>
+                            </ngb-alert>
+                        </div>
+
+                        <div *ngIf="conPass">
+                            <ngb-alert class="alert alert-danger" role="alert">
+                                <!---->
+                                <div class="container">
+                                    <div class="alert-wrapper">
+                                        <div class="message">
+                                            <div class="alert-icon"><i class="now-ui-icons ui-1_simple-remove"></i>
+                                            </div>Confirm password
+                                        </div>
+                                    </div>
+                                </div>
+                            </ngb-alert>
+                        </div>
 
                         <div class="mt-5">
                             <!-- Buttons -->
