--- a/frontend/src/app/components/broadcast/broadcast.component.html
+++ b/frontend/src/app/components/broadcast/broadcast.component.html
@@ -9,46 +9,47 @@
                         <div class="icon icon-primary">
                             <i class="now-ui-icons media-2_sound-wave"></i>
                         </div>
-                        <div class="description">
-                            <h5 class="info-title">Marketing</h5>
-                            <p class="description">
-                                We've created the marketing campaign of the website. It was a very interesting
-                                collaboration.
+                        <div>
+                            <h5 class="info-title">Product</h5>
+                            <p>
+                                Enter the product you want to buy <br>
+                                Better to keep it simple (a single word)
                             </p>
                         </div>
                     </div>
-
+                    <br>
                     <div class="info info-horizontal">
                         <div class="icon icon-primary">
                             <i class="now-ui-icons media-1_button-pause"></i>
                         </div>
-                        <div class="description">
-                            <h5 class="info-title">Fully Coded in HTML5</h5>
-                            <p class="description">
-                                We've developed the website with HTML5 and CSS3. The client has access to the code using
-                                GitHub.
+                        <div>
+                            <h5 class="info-title">Category</h5>
+                            <p>
+                                Select the category of the product
                             </p>
                         </div>
-
                     </div>
-
+                    <br>
                     <div class="info info-horizontal">
                         <div class="icon icon-info">
                             <i class="now-ui-icons users_single-02"></i>
                         </div>
-                        <div class="description">
-                            <h5 class="info-title">Built Audience</h5>
-                            <p class="description">
-                                There is also a Fully Customizable CMS Admin Dashboard for this product.
+                        <div>
+                            <h5 class="info-title">Product Description</h5>
+                            <p>
+                                Enter a small description about the product you want.<br>
+                                Enter product specifications you need
                             </p>
                         </div>
                     </div>
+                    <br>
                     <div class="social-description text-center">
-                        <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/customerprofile">Back</a>
+                        <a class="btn btn-primary btn-round" routerLink="/userprofile/customerprofile">Back</a>
                     </div>
                 </div>
                 <!-- /Instructions for the user -->
                 <!-- Broadcast form -->
+
                 <div class="col-md-4 mr-auto mt-5">
                     <div class="card" style=" width: 30rem;">
                         <div class="mt-2">
