--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -50,91 +50,184 @@
     </div>
   </div>
 
-  <!-- Selling -->
-  <div class="mt-5">
-    <div class="container">
+  <div class="subscribe-line subscribe-line-transparent" style="background-image: url('assets/img/banner.jpg')">
+    <div class="text-center container">
+
       <div class="row">
-        <div class="col-md-3 col-sm-2">
-          <div class="card text-center" style=" width: 70rem;">
-            <div class="col-md-12">
-              <!-- Broadcast Table -->
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="container">
-                      <div class="row">
-                        <h3>Recent Broadcasts Received</h3>
-                        <div class="ml-auto">
-                          <a class="btn btn-sm btn-primary btn-lg btn-round" routerLink="/userprofile/broadcast">View
-                            More</a>
+        <div class=" col-md-12 col-sm-12">
+          <div class="mt-4">
+            <h3>Recent Broadcasts Received</h3>
+          </div>
+
+          <div class="mt-5">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-3 col-sm-2">
+                  <div class="card text-center" style=" width: 70rem;">
+                    <div class="col-md-12">
+                      <!-- Broadcast Table -->
+                      <div class="container">
+                        <div class="row">
+                          <div class="col-md-12">
+                            <div class="container">
+                              <div class="row">
+                                <h3>Selling</h3>
+                                <div class="ml-auto">
+                                  <a class="btn btn-sm btn-primary btn-lg btn-round"
+                                    routerLink="/userprofile/broadcast">View
+                                    More</a>
+                                </div>
+                              </div>
+                            </div>
+                            <form>
+                              <table class="table table-striped table-hover">
+                                <thead>
+
+                                  <tr>
+                                    <th scope="col">Number</th>
+                                    <th scope="col" sortable="name" (sort)="onSort($event)">Product</th>
+                                    <th scope="col" sortable="area" (sort)="onSort($event)">Message</th>
+                                    <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
+                                    <th scope="col">Finalize</th>
+                                    <th scope="col">Action</th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr *ngFor="let x of sellingArray?.selling.slice(0,5)">
+                                    <td>{{x._id | slice:-4}}</td>
+                                    <a routerLink="/userprofile/sellingitem/{{x._id}}">
+                                      <td>{{x.product}}</td>
+                                    </a>
+                                    <td scope="row">{{x.tags}}</td>
+                                    <td scope="row">
+                                      <div class="social-description">
+                                        <a href="#button" class="btn btn-primary btn-sm btn-round btn-sm"
+                                          routerLink="/userprofile/sellerreply">A</a>
+                                      </div>
+                                    </td>
+                                    <td scope="row">
+                                      <div class="social-description">
+                                        <a href="#button" class="btn btn-primary btn-sm btn-round btn-sm"><i
+                                            class="now-ui-icons ui-1_simple-remove"></i></a>
+                                      </div>
+                                    </td>
+                                    <td>
+                                      <div class="social-description">
+                                        <a class="btn btn-primary btn-lg btn-round btn-sm"
+                                          routerLink="/pages/newcomplain">C</a>
+                                      </div>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                            </form>
+
+                          </div>
                         </div>
                       </div>
+                      <!-- /Broadcast Table -->
                     </div>
-
-                    <form>
-                      <table class="table table-striped">
-                        <thead>
-                          <tr>
-                            <th scope="col">ID</th>
-                            <th scope="col" sortable="name" (sort)="onSort($event)">Username</th>
-                            <th scope="col" sortable="area" (sort)="onSort($event)">Product</th>
-                            <th scope="col" sortable="message" (sort)="onSort($event)">Category</th>
-                            <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
-                            <th scope="col" sortable="message" (sort)="onSort($event)">Reply</th>
-                            <th scope="col">View User</th>
-                            <th scope="col">Finalize</th>
-                            <th scope="col">Remove</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr *ngFor="let x of recievedBroadcasts">
-                            <td>{{x[0].userID}}</td>
-                            <td>{{x[0].username}}</td>
-                            <td scope="row">aaa</td>
-                            <td scope="row">
-                              aaa
-                            </td>
-                            <td scope="row">
-                              aaa
-                            </td>
-                            <td>
-                              <div class="social-description">
-                                <a class="btn btn-primary btn-lg btn-round btn-sm"
-                                  routerLink="/userprofile/sellerreplyform/{{x._id}}">R</a>
-                              </div>
-                            </td>
-                            <td>
-                              <div class="social-description">
-                                <a class="btn btn-primary btn-lg btn-round btn-sm" routerLink="/pages/newcomplain">U</a>
-                              </div>
-                            </td>
-                            <td>
-                              <div class="social-description">
-                                <a class="btn btn-primary btn-lg btn-round btn-sm"
-                                  routerLink="/userprofile/finalizingform/{{x._id}}">F</a>
-                              </div>
-                            </td>
-                            <td>
-                              <div class="social-description">
-                                <a href="#button" class="btn btn-primary btn-lg btn-round btn-sm"><i
-                                    class="now-ui-icons ui-1_simple-remove"></i></a>
-                              </div>
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </form>
-
                   </div>
                 </div>
               </div>
-              <!-- /Broadcast Table -->
             </div>
           </div>
+
+
+          <!-- Selling -->
+          <div class="mt-5">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-3 col-sm-2">
+                  <div class="card text-center" style=" width: 70rem;">
+                    <div class="col-md-12">
+                      <!-- Broadcast Table -->
+                      <div class="container">
+                        <div class="row">
+                          <div class="col-md-12">
+                            <div class="container">
+                              <div class="row">
+
+                                <div class="ml-auto">
+                                  <a class="btn btn-sm btn-primary btn-lg btn-round"
+                                    routerLink="/userprofile/broadcast">View
+                                    More</a>
+                                </div>
+                              </div>
+                            </div>
+
+                            <form>
+                              <table class="table table-striped">
+                                <thead>
+                                  <tr>
+                                    <th scope="col">ID</th>
+                                    <th scope="col" sortable="name" (sort)="onSort($event)">Username</th>
+                                    <th scope="col" sortable="area" (sort)="onSort($event)">Product</th>
+                                    <th scope="col" sortable="message" (sort)="onSort($event)">Category</th>
+                                    <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
+                                    <th scope="col" sortable="message" (sort)="onSort($event)">Reply</th>
+                                    <th scope="col">View User</th>
+                                    <th scope="col">Finalize</th>
+                                    <th scope="col">Remove</th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr *ngFor="let x of recievedBroadcasts">
+                                    <td>{{x[0].userID}}</td>
+                                    <td>{{x[0].username}}</td>
+                                    <td scope="row">aaa</td>
+                                    <td scope="row">
+                                      aaa
+                                    </td>
+                                    <td scope="row">
+                                      aaa
+                                    </td>
+                                    <td>
+                                      <div class="social-description">
+                                        <a class="btn btn-primary btn-lg btn-round btn-sm"
+                                          routerLink="/userprofile/sellerreplyform/{{x._id}}">R</a>
+                                      </div>
+                                    </td>
+                                    <td>
+                                      <div class="social-description">
+                                        <a class="btn btn-primary btn-lg btn-round btn-sm"
+                                          routerLink="/pages/newcomplain">U</a>
+                                      </div>
+                                    </td>
+                                    <td>
+                                      <div class="social-description">
+                                        <a class="btn btn-primary btn-lg btn-round btn-sm"
+                                          routerLink="/userprofile/finalizingform/{{x._id}}">F</a>
+                                      </div>
+                                    </td>
+                                    <td>
+                                      <div class="social-description">
+                                        <a href="#button" class="btn btn-primary btn-lg btn-round btn-sm"><i
+                                            class="now-ui-icons ui-1_simple-remove"></i></a>
+                                      </div>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                            </form>
+
+                          </div>
+                        </div>
+                      </div>
+                      <!-- /Broadcast Table -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
   </div>
+
+
 
   <div class="mt-5">
     <div class="container">
