message component created

--- a/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
@@ -32,6 +32,9 @@
               History</a>
           </div>&nbsp;
           <div class="social-description">
+            <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/messages">Messages</a>
+          </div>&nbsp;
+          <div class="social-description">
             <a href="#button" class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/bookmarks">Bookmarks</a>
           </div>
         </div>
